Updated/Patched Order Content to DTO