@@ -6,9 +6,9 @@ import com.praktiker.shop.entities.product.Product;
 import com.praktiker.shop.exceptions.OrderNotFoundException;
 import com.praktiker.shop.persistance.OrderRepository;
 import com.praktiker.shop.services.statistics.ProductStatistic;
-import com.praktiker.shop.utilis.OrderItemTestFactory;
-import com.praktiker.shop.utilis.OrderTestFactory;
-import com.praktiker.shop.utilis.ProductTestFactory;
+import com.praktiker.shop.utilis.factories.OrderItemTestFactory;
+import com.praktiker.shop.utilis.factories.OrderTestFactory;
+import com.praktiker.shop.utilis.factories.ProductTestFactory;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -38,13 +38,15 @@ public class ProductStatisticsTest {
     void shouldFindBestseller() {
         List<Product> products = ProductTestFactory.createProductList();
 
-        Product bestseller = products.get(0);
+        Product bestseller = products.getFirst();
 
-        List<OrderItem> orderItemsFirst = OrderItemTestFactory.createOrderItemList(1L, BigDecimal.valueOf(5), products.get(0));
+        List<OrderItem> orderItemsFirst = OrderItemTestFactory.createOrderItemList(1L, BigDecimal.valueOf(5),
+                                                                                   products.get(0));
 
         Order orderFirst = OrderTestFactory.createOrder(orderItemsFirst);
 
-        List<OrderItem> orderItemsSecond = OrderItemTestFactory.createOrderItemList(2L, BigDecimal.ONE, products.get(1));
+        List<OrderItem> orderItemsSecond = OrderItemTestFactory.createOrderItemList(2L, BigDecimal.ONE,
+                                                                                    products.get(1));
         Order orderSecond = OrderTestFactory.createOrder(orderItemsSecond);
 
         when(orderRepository.findAll()).thenReturn(List.of(orderFirst, orderSecond));
